<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_clock"
        android:title="@string/timetable"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_events"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/tasks" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_services"
        android:title="@string/services" />

</menu>